--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.13",
+    "@angular/animations": "^8.2.13",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "8.2.13",
-    "@angular/compiler": "8.2.13",
-    "@angular/core": "8.2.13",
-    "@angular/forms": "8.2.13",
-    "@angular/platform-browser": "8.2.13",
-    "@angular/platform-browser-dynamic": "8.2.13",
-    "@angular/router": "8.2.13",
+    "@angular/common": "^8.2.13",
+    "@angular/compiler": "^8.2.13",
+    "@angular/core": "^8.2.13",
+    "@angular/forms": "^8.2.13",
+    "@angular/platform-browser": "^8.2.13",
+    "@angular/platform-browser-dynamic": "^8.2.13",
+    "@angular/router": "^8.2.13",
     "@fullcalendar/core": "^4.3.1",
     "chart.js": "^2.9.2",
-    "core-js": "3.4.0",
-    "primeicons": "2.0.0",
-    "primeng": "8.1.1",
+    "core-js": "^3.4.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.1.1",
     "quill": "^1.3.7",
-    "rxjs": "6.5.3",
-    "zone.js": "0.10.2"
+    "rxjs": "^6.5.3",
+    "zone.js": "^0.10.2"
   },
   "scripts": {
     "ng": "ng",
@@ -30,24 +30,24 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
+    "@angular-devkit/build-angular": "^0.900.7",
+    "@angular/cli": "^8.2.2",
+    "@angular/compiler-cli": "^8.2.13",
+    "@angular/language-service": "^8.2.13",
+    "@types/jasmine": "^2.8.8",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^8.9.4",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "^2.99.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "protractor": "^5.4.0",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1"
   }
 }
