--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "primeng": "^8.1.1",
     "quill": "^1.3.7",
     "rxjs": "^6.5.3",
+    "tslib": "^1.11.1",
     "zone.js": "^0.10.2"
   },
   "scripts": {
