--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.13",
+    "@angular/animations": "^9.0.7",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/router": "^8.2.13",
+    "@angular/common": "^9.0.7",
+    "@angular/compiler": "^9.0.7",
+    "@angular/core": "^9.0.7",
+    "@angular/forms": "^9.0.7",
+    "@angular/platform-browser": "^9.0.7",
+    "@angular/platform-browser-dynamic": "^9.0.7",
+    "@angular/router": "^9.0.7",
     "@fullcalendar/core": "^4.3.1",
     "chart.js": "^2.9.2",
     "core-js": "^3.4.0",
@@ -19,8 +19,8 @@
     "primeng": "^8.1.1",
     "quill": "^1.3.7",
     "rxjs": "^6.5.3",
-    "tslib": "^1.11.1",
-    "zone.js": "^0.10.2"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "scripts": {
     "ng": "ng",
@@ -31,14 +31,14 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.7",
-    "@angular/cli": "^8.2.13",
-    "@angular/compiler-cli": "^8.2.13",
-    "@angular/language-service": "^8.2.13",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular/cli": "^9.0.7",
+    "@angular/compiler-cli": "^9.0.7",
+    "@angular/language-service": "^9.0.7",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^8.9.4",
-    "codelyzer": "^5.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.4.1",
@@ -49,6 +49,6 @@
     "protractor": "^5.4.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.7.5"
   }
 }
