--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.7",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^9.1.0",
     "@angular/common": "^9.0.7",
     "@angular/compiler": "^9.0.7",
     "@angular/core": "^9.0.7",
@@ -14,9 +14,9 @@
     "@angular/router": "^9.0.7",
     "@fullcalendar/core": "^4.3.1",
     "chart.js": "^2.9.2",
-    "core-js": "^3.4.0",
+    "core-js": "^3.6.4",
     "primeicons": "^2.0.0",
-    "primeng": "^8.1.1",
+    "primeng": "^9.0.2",
     "quill": "^1.3.7",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
@@ -25,6 +25,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -46,9 +47,10 @@
     "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.0",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.7.5"
+    "prettier": "^1.19.1",
+    "protractor": "^5.4.3",
+    "ts-node": "^8.4.1",
+    "tslint": "^6.0.0",
+    "typescript": "~3.7.5"
   }
 }
